--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["flit_core >=2,<3"]
+requires = ["flit_core >=2,<3", "wheel"]
 build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
@@ -50,7 +50,8 @@ test = [
 doc = [
     "mkdocs >=1.1.2,<2.0.0",
     "mkdocs-material >=5.4.0,<6.0.0",
-    "markdown-include >=0.5.1,<0.6.0"
+    "markdown-include >=0.5.1,<0.6.0",
+    "tornado>=5.0"
 ]
 dev = [
     "autoflake >=1.3.1,<2.0.0",
