--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,29 @@
 [bumpversion]
-current_version = 0.3.4
+current_version = 0.3.5
 commit = True
 tag = True
 commit_args = -a
 
 [bumpversion:file:typer/__init__.py]
+
+[darglint]
+strictness = long
+docstring_style = google
+
+[bdist_wheel]
+universal = 1
+
+[mypy]
+ignore_missing_imports = True
+
+[mypy-typer.*]
+disallow_untyped_defs = True
+strict = True
+
+[pydantic-mypy]
+init_typed = True
+warn_untyped_fields = True
+
+[tool:pytest]
+norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
+doctest_optionflags = NUMBER NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
